scelta categorie signup

--- a/test/templates/signup.html
+++ b/test/templates/signup.html
@@ -326,7 +326,7 @@
                                 <div class="p-1 rounded mb-2 bg-white">
                                     <div>
                                         <h6 class="dropdown-toggle" data-bs-toggle="dropdown" aria-labelledby=dropdownMenuButton>Categorie preferite</h6>
-                                        <ul class="dropdown-menu scrollable-menu" role="menu">
+                                        <ul class="dropdown-menu scrollable-menu" role="menu" style="padding-left: 5px; padding-right: 20px;">
                                             <li><label><input type="checkbox" name="categoria1" value="Cereali e patate">Cereali e patate</label></li>
                                             <li><label><input type="checkbox" name="categoria2" value="Legumi">Legumi</label></li>
                                             <li><label><input type="checkbox" name="categoria3" value="Formaggi">Formaggi</label></li>
@@ -338,6 +338,26 @@
                                         </ul>
                                     </div>
                                 </div>
+    <div class="p-1 rounded mb-2 bg-white">
+    <div>
+        
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Seleziona categorie
+            </button>
+            <ul class="dropdown-menu" role="menu" style="padding-left: 10px; padding-right: 10px;">
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria1" value="Cereali e patate">Cereali e patate</label></li>
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria2" value="Legumi">Legumi</label></li>
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria3" value="Formaggi">Formaggi</label></li>
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria4" value="Prodotti A Base Di Carne">Prodotti A Base Di Carne</label></li>
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria5" value="Cibi A Base Di Frutta E Verdura">Cibi A Base Di Frutta E Verdura</label></li>
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria6" value="Latticini">Latticini</label></li>
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria7" value="Biscotti">Biscotti</label></li>
+                <li class="mb-2"><label class="checkbox-label"><input type="checkbox" name="categoria8" value="Cibi E Bevande A Base Vegetale">Cibi E Bevande A Base Vegetale</label></li>
+            </ul>
+        </div>
+    </div>
+</div>
                                 <button class="w-100 btn btn-secondary border-3 border-secondary bg-verde-scuro text-light py-3" type="submit">Registrati</button>
                             </div>
                         </div>
