--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -419,19 +419,18 @@
                             </div>
                             <div class="col-lg-12">
                                 <h4 class="mb-4">Prodotti Simili</h4>
+                                {% for elem in related_products%}
                                 <div class="d-flex align-items-center justify-content-start">
                                     <div class="rounded" style="width: 100px; height: 100px;">
-                                        <img src="img/featur-1.jpg" class="img-fluid rounded" alt="Image">
+                                        <a href="/product/{{elem.code}}">
+                                        <img src="{{elem.image_url}}" class="img-fluid rounded" alt="Image">
+                                        </a>
                                     </div>
                                     <div>
-                                        <h6 class="mb-2">Big Banana</h6>
-                                        <div class="d-flex mb-2">
-                                            <h5 class="fw-bold me-2">2.99 $</h5>
-                                        </div>
+                                        <a class="mb-2 h6" href="/product/{{elem.code}}"> {{elem.product_name}} </a>
                                     </div>
-                                </div>
-                                <div class="d-flex justify-content-center my-4">
-                                    <a href="#" class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100">Vew More</a>
+                                    </div>
+                                {% endfor %}
                                 </div>
                             </div>
                         </div>
