--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -418,9 +418,9 @@
                                 </div>
                             </div>
                             <div class="col-lg-12">
-                                <h4 class="mb-4">Prodotti Simili</h4>
+                                <h4 class="mb-4">Prodotti Consigliati</h4>
                                 {% for elem in related_products%}
-                                <div class="d-flex align-items-center justify-content-start">
+                                <div class="d-flex align-items-center justify-content-start mb-5">
                                     <div class="rounded" style="width: 100px; height: 100px;">
                                         <a href="/product/{{elem.code}}">
                                         <img src="{{elem.image_url}}" class="img-fluid rounded" alt="Image">
