--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -423,7 +423,7 @@
                                 <div class="d-flex align-items-center justify-content-start mb-5">
                                     <div class="rounded" style="width: 100px; height: 100px;">
                                         <a href="/product/{{elem.code}}">
-                                        <img src="{{elem.image_url}}" class="img-fluid rounded" alt="Image">
+                                        <img src="{{elem.image_url}}" class="img-fluid rounded" alt="Image" style="width: 100px; height: 100px;">
                                         </a>
                                     </div>
                                     <div>
