--- a/test/templates/search.html
+++ b/test/templates/search.html
@@ -396,11 +396,11 @@
                                     {% if current_page > 1 %}
                                     <a href="/search/{{term}}?page={{ current_page - 1 }}" class="rounded">&laquo;</a>
                                     {% endif %}
-                                    {% for page_num in range(1, total_pages + 1) %}
+                                    {% for page_num in range(max(1, current_page - 1), min(total_pages + 1, current_page
+                                    + 2)) %}
                                     <a href="/search/{{term}}?page={{ page_num }}"
-                                       class="rounded{% if page_num == current_page %} active{% endif %}">
-                                        {{ page_num }}
-                                    </a>
+                                       class="rounded{% if page_num == current_page %} active{% endif %}">{{ page_num
+                                        }}</a>
                                     {% endfor %}
                                     {% if current_page < total_pages %}
                                     <a href="/search/{{term}}?page={{ current_page + 1 }}" class="rounded">&raquo;</a>
