--- a/test/templates/products.html
+++ b/test/templates/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shop</title>
+    <title>Prodotti</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
 
@@ -262,7 +262,6 @@
                             <label for="fruits">Default Sorting:</label>
                             <select id="fruits" name="fruitlist" class="border-0 form-select-sm bg-light me-3"
                                     form="fruitform">
-                                <option value="volvo">Nothing</option>
                                 <option value="saab">Popularity</option>
                                 <option value="opel">Organic</option>
                                 <option value="audi">Fantastic</option>
