--- a/test/templates/search.html
+++ b/test/templates/search.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shop</title>
+    <title>Prodotti</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
 
