--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -123,6 +123,27 @@
             });
         });
     </script>
+    <script>
+    // Ottieni il riferimento agli elementi del cuore
+    var heartButton = document.getElementById('heartButton');
+    var heartIcon = document.getElementById('heartIcon');
+
+    // Aggiungi un gestore di eventi al clic del cuore
+    heartButton.addEventListener('click', function () {
+        // Cambia dinamicamente la classe del cuore per cambiare il colore
+        if (heartIcon.classList.contains('text-secondary')) {
+            heartIcon.classList.remove('text-secondary');
+            heartIcon.classList.add('text-danger'); // Cambia il colore desiderato, ad esempio rosso
+        } else {
+            heartIcon.classList.remove('text-danger');
+            heartIcon.classList.add('text-secondary'); // Ripristina il colore originale
+        }
+
+        // Puoi anche aggiungere qui la logica per aggiungere il prodotto ai preferiti
+        // Aggiungi qui la tua logica per gestire l'aggiunta ai preferiti
+        // ...
+    });
+</script>
     <style>
         .ia_form{}
         .code-btn{
@@ -434,11 +455,17 @@
                                     <a class="h6 maxText" href="/product/{{elem.code}}">{{elem.product_name}}</a>
                                     <div class="d-flex justify-content-between flex-lg-wrap">
                                         <form method="post">
-                                        <button class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2" name="fav"
+                                        <button class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2" id="heartButton" name="fav"
                                         {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}" {% else %} onclick="Gologin()" {% endif %}>
-                                            <i class="fa fa-heart me-2 text-secondary"></i>
+                                            <i class="fa fa-heart me-2 text-secondary" id="heartIcon"></i>
                                         </button>
                                             </form>
+
+<!--<a href="#" id="" class="btn border border-secondary rounded-pill px-3 text-primary mx-1 my-2">-->
+<!--    <i id="heartIcon" class="fa fa-heart me-2 text-secondary"></i>-->
+<!--</a>-->
+
+
                                         <form method="post" class="ia_form">
                                             <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
                                                     type="submit" data-bs-toggle="modal" name="prompt"
