--- a/test/templates/search.html
+++ b/test/templates/search.html
@@ -324,18 +324,18 @@
                             <div class="col-12">
                                 <div class="pagination d-flex justify-content-center mt-5">
                                     {% if current_page > 1 %}
-                                    <a href="/product?page=1" class="rounded"><i class="bi bi-arrow-return-left"></i></a>
-                                    <a href="/product?page={{ current_page - 1 }}" class="rounded"><i class="bi bi-arrow-left"></i></a>
+                                    <a href="/search/{{term}}?page=1" class="rounded"><i class="bi bi-arrow-return-left"></i></a>
+                                    <a href="/search/{{term}}?page={{ current_page - 1 }}" class="rounded"><i class="bi bi-arrow-left"></i></a>
                                     {% endif %}
                                     {% for page_num in range(max(1, current_page - 1), min(total_pages + 1, current_page
                                     + 10)) %}
-                                    <a href="/product?page={{ page_num }}"
+                                    <a href="/search/{{term}}?page={{ page_num }}"
                                        class="rounded{% if page_num == current_page %} active{% endif %}">{{ page_num
                                         }}</a>
                                     {% endfor %}
                                     {% if current_page < total_pages %}
-                                    <a href="/product?page={{ current_page + 1 }}" class="rounded"><i class="bi bi-arrow-right"></i></a>
-                                    <a href="/product?page={{ total_pages }}" class="rounded"><i class="bi bi-arrow-return-right"></i></a>
+                                    <a href="/search/{{term}}?page={{ current_page + 1 }}" class="rounded"><i class="bi bi-arrow-right"></i></a>
+                                    <a href="/search/{{term}}?page={{ total_pages }}" class="rounded"><i class="bi bi-arrow-return-right"></i></a>
                                     {% endif %}
                                 </div>
                             </div>
